--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="keywords" content="Online Auctions" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markatplace</title>
+    <title>Art Ascending Charity Art Auction</title>
     <link rel="icon" type="image/png" href="./img/favicon.ico" />
 
     <!-- Bootstrap -->
@@ -49,7 +49,7 @@
             height="24"
             class="d-inline-block align-text-top"
           />
-          The Markatplace
+          Art Ascending Charity Art Auction
         </a>
         <div class="row row-cols-auto">
           <a class="navbar-brand" id="username-display"></a>
@@ -97,7 +97,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 id="login-modal-title" class="modal-title">
-              Sign up for Markatplace Auction
+              Sign up for auction
             </h5>
           </div>
           <div class="modal-body">
