--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="keywords" content="Online Auctions" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Art Ascending Charity Art Auction</title>
+    <title>Srt Ascending Charity Art Auction</title>
     <link rel="icon" type="image/png" href="./img/favicon.ico" />
 
     <!-- Bootstrap -->
