--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
       >
         <div class="col-md-4 d-flex align-items-center">
-          <span class="text-muted">Art Ascending</span>
+          <span class="text-muted">© 2022 Harry Mellor</span>
         </div>
 
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
