--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="keywords" content="Online Auctions" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Srt Ascending Charity Art Auction</title>
+    <title>Art Ascending Charity Art Auction</title>
     <link rel="icon" type="image/png" href="./img/favicon.ico" />
 
     <!-- Bootstrap -->
@@ -75,7 +75,7 @@
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
       >
         <div class="col-md-4 d-flex align-items-center">
-          <span class="text-muted">© 2022 Harry Mellor</span>
+          <span class="text-muted">Art Ascending</span>
         </div>
 
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
