--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,7 @@
     />
     <meta name="keywords" content="Online Auctions" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markatplace</title>
+    <title>Art Ascending Charity Art Auction</title>
     <link rel="icon" type="image/png" href="./img/favicon.ico" />
 
     <!-- Bootstrap -->
@@ -39,7 +39,7 @@
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-dark bg-primary">
+    <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand mb-0 h1 me-auto">
           <img
@@ -49,7 +49,7 @@
             height="24"
             class="d-inline-block align-text-top"
           />
-          The Markatplace
+          Art Ascending Charity Art Auction
         </a>
         <div class="row row-cols-auto">
           <a class="navbar-brand" id="username-display"></a>
@@ -86,7 +86,7 @@
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
       >
         <div class="col-md-4 d-flex align-items-center">
-          <span class="text-muted">© 2022 Harry Mellor</span>
+          <span class="text-muted">Art Ascending</span>
         </div>
 
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
@@ -108,7 +108,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 id="login-modal-title" class="modal-title">
-              Sign up for Markatplace Auction
+              Sign up for auction
             </h5>
           </div>
           <div class="modal-body">
