--- a/index.html
+++ b/index.html
@@ -102,14 +102,13 @@
           </div>
           <div class="modal-body">
             <p>
-              We use anonymous authentication provided by Google. Your account
-              is attached to your device signature.
+              
             </p>
-            <p>The username just lets us know who's bidding!</p>
+            <p>Please provide us with your name email, and number to let us know who's bidding!</p>
             <form onsubmit="return false;">
               <div class="form-floating mb-3">
                 <input
-                  type="username"
+                  type="Format: Name/Email/Number"
                   class="form-control"
                   id="username-input"
                   placeholder="username"
@@ -181,7 +180,7 @@
           <div class="modal-body">
             <p>You are about to place a bid on <strong></strong></p>
             <p class="text-muted">
-              (This is just a demo, you're not bidding real money)
+              
             </p>
             <form onsubmit="return false;">
               <div class="form-floating mb-3">
