--- a/index.html
+++ b/index.html
@@ -101,19 +101,16 @@
             </h5>
           </div>
           <div class="modal-body">
-            <p>
-              
-            </p>
-            <p>Please provide us with your name email, and number to let us know who's bidding!</p>
+            <p>Please provide us with your name, email, and number to let us know who's bidding!</p>
             <form onsubmit="return false;">
               <div class="form-floating mb-3">
                 <input
-                  type="Format: Name/Email/Number"
+                  type="username"
                   class="form-control"
                   id="username-input"
                   placeholder="username"
                 />
-                <label for="username-input">Username</label>
+                <label for="username-input">Format: Name/Email/Number</label>
               </div>
               <div class="modal-footer">
                 <button
