--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               data-bs-target="#bid-modal"
               aria-label="Submit bid"
             >
-              Submit bid
+              Place bid
             </button>
           </div>
         </div>
