--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </h5>
           </div>
           <div class="modal-body">
-            <p>Please provide us with your name, email, and number to let us know who's bidding!</p>
+            <p>Please provide us with your name, email, and phone number to let us know who's bidding!</p>
             <form onsubmit="return false;">
               <div class="form-floating mb-3">
                 <input
