--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             height="24"
             class="d-inline-block align-text-top"
           />
-          Art Bascending Charity Art Auction
+          Art Ascending Charity Art Auction
         </a>
         <div class="row row-cols-auto">
           <a class="navbar-brand" id="username-display"></a>
