--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               id="username-input"
               placeholder="Name/Email/Number"
             />
-            <label for="username-input">Format: Name/Email/Number</label>
+            <label for="username-input">Name>
           </div>
           <div class="form-floating mb-3">
             <input
