--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               type="username"
               class="form-control"
               id="username-input"
-              placeholder="Name/Email/Number"
+              placeholder="Name"
             />
             <label for="username-input">Name>
           </div>
