--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               id="username-input"
               placeholder="Name"
             />
-            <label for="username-input">Name>
+            <label for="username-input">Name</label>label>
           </div>
           <div class="form-floating mb-3">
             <input
