--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
+    <style>
+      body {
+        background-image: url(https://live.staticflickr.com/65535/53286230059_fa7b7f5085_z.jpg); 
+        background-size: cover;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+      }
     <meta charset="utf-8" />
     <meta name="robots" content="NOINDEX, NOFOLLOW" />
     <!--add no follow tag to keep out of front facing index and search engines-->
