--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+      href="https://fonts.googleapis.com/css2?family=Spectral+Light&display=swap" rel="stylesheet" />
   </head>
-
+                          
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-light bg-light">
