--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Spectral+Light&display=swap" rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   </head>
                           
   <body>
@@ -168,7 +168,7 @@
             <h5 class="modal-title"></h5>
             <button
               type="button"
-              class="btn-close"
+              class="btn custom-buttontwo"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></button>
@@ -188,7 +188,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-primary"
+              class="btn custom-button"
               data-bs-toggle="modal"
               data-bs-target="#bid-modal"
               aria-label="Submit bid"
