--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <h5 class="modal-title"></h5>
             <button
               type="button"
-              class="btn custom-buttontwo"
+              class="btn"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></button>
