--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" 
+      rel="stylesheet"
+    />
   </head>
                           
   <body>
@@ -106,11 +108,11 @@
 
     <!-- Login popup -->
     <div id="login-modal" class="modal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 id="login-modal-title" class="modal-title">
-          Sign up for auction
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 id="login-modal-title" class="modal-title">
+              Sign up for auction
         </h5>
       </div>
       <div class="modal-body">
@@ -149,7 +151,7 @@
               class="btn btn-secondary"
               data-bs-dismiss="modal"
               aria-label="Cancel"
-            >
+             >
               Cancel
             </button>
             <button type="submit" class="btn btn-primary">Sign up</button>
@@ -168,7 +170,7 @@
             <h5 class="modal-title"></h5>
             <button
               type="button"
-              class="btn-"
+              class="btn-close"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></button>
