--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             >
               Cancel
             </button>
-            <button type="submit" class="btn btn-primary">Submit bid</button>
+            <button type="submit" class="btn btn-primar">Submit bid</button>
           </div>
         </div>
       </div>
